# Platzigram-django

./: .gitignore  pyproject.toml
platzigram/: middleware.py  settings.py  urls.py
posts/: apps.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py
templates/: base.html  nav.html
templates/posts/: detail.html  feed.html  new.html
templates/users/: base.html  bases.html  login.html  signup.html  update_profile.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
